# cpp_opencv_person_detector_tracker

./: .gitignore  CMakeLists.txt  README.md  csrt_tracker.cpp  csrt_tracker.h  main.cpp  main.h  person_tracker.cpp  video_handler.cpp  video_handler.h  yolo_detection.cpp  yolo_detection.h
core/: Colors.h  Globals.h
docs/: opencv.md
utils/: Utils.cpp  Utils.h  date.h
